#pragma once

#include <vulkan/vulkan.h>

#include "VknImageView.hpp"

namespace vkn
{
    class VknSwapchain
    {
    public:
        VknSwapchain() = delete;
        VknSwapchain(VknEngine *engine, VknIdxs relIdxs, VknIdxs absIdxs, VknInfos *m_infos);

        void setImageCount(uint32_t imageCount);
        void setImageDimensions(uint32_t imageWidth, uint32_t imageHeight);
        void setSurfaceFormat(VkFormat format, VkColorSpaceKHR colorSpace);
        void setNumImageLayers(uint32_t numImageLayers);
        void setUsage(VkImageUsageFlags usage);
        void setSharingMode(VkSharingMode sharingMode);
        void setPreTransform(VkSurfaceTransformFlagBitsKHR preTransform);
        void setCompositeAlpha(VkCompositeAlphaFlagBitsKHR compositeAlpha);
        void setPresentMode(VkPresentModeKHR presentMode);
        void setClipped(bool clipped);
        void setOldSwapchain(VkSwapchainKHR oldSwapchain);
        void setSurface(VkSurfaceKHR *surface);

        VkSwapchainKHR *getVkSwapchain();
        std::vector<VkImageView> *getVkImageViews();

        void fillSwapchainCreateInfo();
        void createSwapchain();
        void getImages();
        void createImageViews();

    private:
        // Engine
        VknEngine *m_engine{nullptr};
        VknIdxs m_relIdxs{};
        VknIdxs m_absIdxs{};
        VknInfos *m_infos{nullptr};

        // Wrapped object
        VkSwapchainKHR m_vkSwapchain = VK_NULL_HANDLE;

        // Members
        std::vector<VknImageView> m_imageViews{};
        std::vector<VkImage> m_images{};
        std::vector<VkImageView> m_rawImageViews{};

        // Params
        VkExtent2D m_dimensions;
        VkSurfaceFormatKHR m_surfaceFormat{VkSurfaceFormatKHR{VK_FORMAT_B8G8R8A8_SRGB, VK_COLOR_SPACE_SRGB_NONLINEAR_KHR}};
        uint32_t m_numImageArrayLayers{1};
        VkImageUsageFlags m_usage{VK_IMAGE_USAGE_COLOR_ATTACHMENT_BIT};
        VkSharingMode m_sharingMode{VK_SHARING_MODE_EXCLUSIVE};
        VkSurfaceTransformFlagBitsKHR m_preTransform{VK_SURFACE_TRANSFORM_IDENTITY_BIT_KHR};
        VkCompositeAlphaFlagBitsKHR m_compositeAlpha{VK_COMPOSITE_ALPHA_OPAQUE_BIT_KHR};
        VkPresentModeKHR m_presentMode{VK_PRESENT_MODE_FIFO_KHR};
        VkBool32 m_clipped{VK_TRUE};
        VkSwapchainKHR m_oldSwapchain{VK_NULL_HANDLE};
        uint32_t m_imageCount{1};

        // State
        bool m_filledCreateInfo{false};
        bool m_createdSwapchain{false};
        bool m_surfaceSet{false};
        bool m_imageCountSet{false};

        void resizeImageVectors();
        void addImageViews();
    };
}